# AI-Copilot-Console

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: settings.local.json
backend/: requirements-auth.txt  requirements.txt
backend/ai_copilot_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/app/: __init__.py  auth.py  config.py  db.py  db_models.py  main.py  models.py
backend/app/auth/: dependencies.py  models.py  mongodb.py  routes.py  utils.py
backend/app/evaluation/: __init__.py  dataset.json  evaluator.py  metrics.py  rag_eval.py  report.json
backend/app/services/: agent.py  auth.py  cache.py  document_loader.py  errors.py  extraction.py  llm_provider.py  memory.py  metrics.py  orchestrator.py  retrieval.py  suggestions.py  user_store.py
backend/tests/: test_agent.py  test_auth.py  test_auth_dependencies.py  test_auth_models.py  test_auth_routes.py  test_auth_utils.py  test_chunking.py  test_evaluation.py  test_llm_provider.py  test_memory.py  test_metrics.py  test_mongodb.py  test_multi_tenant.py  test_orchestrator.py  test_retrieval_quality.py  test_streaming_api.py  test_suggestions.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  Login.jsx  Register.jsx  api.js  main.jsx  styles.css
frontend/src/auth/: AuthContext.jsx  ProtectedRoute.jsx
frontend/src/components/: AppHeader.jsx  ConfirmModal.jsx  MetricsCard.jsx  ModeSelector.jsx  QueryInput.jsx  Sidebar.jsx  (+1 more)
frontend/tests/: App.test.jsx
(+9 files in other folders)
